--- a/css/main.css
+++ b/css/main.css
@@ -58,13 +58,21 @@ footer {
 /*---------- TABLET ----------*/
 /* Change the background colors below */
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1199px) {
   header {
     background-color: #ff0000;
+    width: 50%;
+    height: 320px;
+    float: left;
+  }
+
+  .col-3 {
+      width: 50%;
   }
 
   #column-1 {
     background-color: #ff2020;
+    float: right;
   }
 
   #column-2 {
@@ -86,6 +94,10 @@ footer {
 @media (min-width: 1200px) {
   header {
     background-color: #00ff00;
+  }
+
+  .col-3 {
+      width: 33.3333333%;
   }
 
   #column-1 {
